# Sensor_mofo_MQTT

./: .gitignore  CMakeLists.txt  README.md  README.md (Repositório Backend - Python)  README.md (Repositório Firmware - ESP32)  idf_component.yml
main/: CMakeLists.txt  main.c  wifi_manager.c  wifi_manager.h
